tests/snapshots/page_snapshots__agents_80x24.snap
---
source: tests/page_snapshots.rs
expression: narrow
---
 agents                                                                         
 ◈ Planner | ⟠ Coder | ◉ Tester | ◆ Reviewer                                    
  ◈ Planner · done · ? · in:100 out:50 · $0.0010                                
                                                                                
                                                                                
┌ TRANSCRIPT ──────────────────────────────────────────────────────────────────┐
│  Summary:                                                                    │
│    plan ready                                                                │
│                                                                              │
│  Output:                                                                     │
│    transcript: plan ready                                                    │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 [Tab/Shift+Tab] prev/next   [Esc] back
