tests/snapshots/page_snapshots__chat_120x30.snap
---
source: tests/page_snapshots.rs
expression: wide
---
  ↑ 2 lines above                                                                                                       
  Directory: /tmp/niki-page-snapshots                                                                                   
  Branch: niki/e5c8f1                                                                                                   
                                                                                                                        
◈ user: Add a health endpoint                                                                                           
                                                                                                                        
⟠ assistant: Dispatching pipeline: planner, coder, tester, reviewer.                                                    
                                                                                                                        
 ▸ ◈ Planner   ✓ 150 tok · $0.0010                                                                                      
  └ plan ready                                                                                                          
    transcript: plan ready                                                                                              
      Ctrl+O to expand                                                                                                  
                                                                                                                        
 ▸ ⟠ Coder     ✓ 150 tok · $0.0010                                                                                      
  └ patch applied                                                                                                       
    transcript: patch applied                                                                                           
      Ctrl+O to expand                                                                                                  
                                                                                                                        
 ▸ ◉ Tester    ✓ 150 tok · $0.0010                                                                                      
  └ tests green                                                                                                         
    transcript: tests green                                                                                             
      Ctrl+O to expand                                                                                                  
                                                                                                                        
 ▸ ◆ Reviewer  ✓ 150 tok · $0.0010                                                                                      
  └ approved                                                                                                            
    transcript: approved                                                                                                
      Ctrl+O to expand                                                                                                  
                                                                                                                        
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
>
