tests/snapshots/page_snapshots__cost_80x24.snap
---
source: tests/page_snapshots.rs
expression: narrow
---
 cost · niki/e5c8f1                                                             
  ──────────────────────────────────────────────────────────────────────        
┌ COST BREAKDOWN ──────────────────────────────────────────────────────────────┐
│  AGENT       MODEL                 TOKENS   COST     LATENCY                 │
│  ──────────  ────────────────────  ───────  ────────  ────────               │
│  ◈ Planner  anthropic/claude-sonnet-4150     $0.0010 1.2s                    │
│  ⟠ Coder    anthropic/claude-sonnet-4150     $0.0010 1.2s                    │
│  ◉ Tester   anthropic/claude-sonnet-4150     $0.0010 1.2s                    │
│  ◆ Reviewer anthropic/claude-sonnet-4150     $0.0010 1.2s                    │
│  ──────────  ────────────────────  ───────  ────────  ────────               │
│  TOTAL                           600     $0.0040 4.8s                        │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
  ──────────────────────────────────────────────────────────────────────        
┌ PER-AGENT COST ──────────────────────────────────────────────────────────────┐
│  ◈ Planner  ████████████████████ $0.0010                                     │
│  ⟠ Coder    ████████████████████ $0.0010                                     │
│  ◉ Tester   ████████████████████ $0.0010                                     │
│  ◆ Reviewer ████████████████████ $0.0010                                     │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 [Esc] back
