tests/snapshots/page_snapshots__diff_80x24.snap
---
source: tests/page_snapshots.rs
expression: narrow
---
 diff · niki/e5c8f1                                                             
  0 files   +1 -1                                                               
                                                                                
┌ CHANGES ─────────────────────────────────────────────────────────────────────┐
│--- a/src/list.rs                                                             │
│+++ b/src/list.rs                                                             │
│@@ -28,7 +28,7 @@                                                             │
│  28 -    let end = start + size - 1;                                         │
│  28       let   end   =   start   +  -size- --- -1;+size;                    │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 j/k scroll  g/G top/bot  n lines:on  r annot  Esc back
